--- a/assets/css/source/_seguros-detail.scss
+++ b/assets/css/source/_seguros-detail.scss
@@ -97,7 +97,11 @@
         }
         
         section.section-ventajas{
-            padding-top: 130px;
+            padding-top: 70px;
+
+            @include for-phone-landscape-up{
+                padding-top: 130px;
+            }
     
             .ventajas-table{
                 position: relative;
@@ -136,13 +140,15 @@
                         bottom: 75px;
                     }
                     
-                    .col-6{
-                        padding:{
-                            left: 4em;
-                            right: 4em;
-                        }
-
+                    .col-md-6{
                         min-height: 350px;
+
+                        @include for-phone-only{
+                            padding: {
+                                left: 0;
+                                right: 0;
+                            }
+                        }
                     }
     
                     h3,p{
@@ -172,7 +178,11 @@
         }
         
         section.promo-img-banner{
-            padding-top: 220px;
+            padding-top: 80px;
+
+            @include for-phone-landscape-up{
+                padding-top: 220px;
+            }
     
             .col{
                 position: relative;
